# OTRExporter

./: CMakeLists.txt  extract_assets.py  rom_chooser.py  rom_info.py
CFG/: Config_MM.xml
CMake/: DefaultCXX.cmake
OTRExporter/: AnimationExporter.cpp  AudioExporter.cpp  CKeyFrameExporter.cpp  CKeyFrameExporter.h  CMakeLists.txt  DisplayListExporter.cpp  Exporter.h  ExporterArchiveOTR.cpp  Main.cpp  TextureAnimationExporter.cpp  TextureAnimationExporter.h  VersionInfo.cpp  VtxExporter.cpp
